discussion/kv_engine/185020/185020_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: CDC stream backfill with a dropped collection

Primarily add a test that includes a dropped collection in the
scanned history range. This highlighted a problem in the collections
ScanContext as with history enabled the scanAllVersions method will
return both the create and drop of a collection as separate system
events. The isLogicallyDeleted code now needs to be able to distinguish
the create and drop collection events so that a backfill can exclude
the create event if the collection is dropped.

Change-Id: Icd78e81e9106d7c7014e9e7caecf89a948960d24

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-27 16:04:26.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 16:04:55.000000000
Message: 
Patch Set 12: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334714/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 17:07:49.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/958/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1834:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1838:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1842:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2903:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/958/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1834:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/958/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1146/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(794): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1146/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/928/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/928/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1264/ : FAILURE

Compile error at [2023-01-27T16:09:02.818Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1264/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/971/ : FAILURE

Compile error at [2023-01-27T16:45:27.195Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/972/ : FAILURE

Compile error at [2023-01-27T16:52:16.162Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/972/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/951/ : FAILURE

Compile error at [2023-01-27T16:55:02.694Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/951/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/978/ : FAILURE

Compile error at [2023-01-27T16:40:11.163Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/978/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/968/ : FAILURE

Compile error at [2023-01-27T16:12:30.122Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:794:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/968/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22423/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/980/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
